# bsp4bazel

./: .git-blame-ignore-revs  .gitignore  .scalafmt.conf  CONTRIB.md  LICENSE  README.md  build.sbt  example-msgs.txt
.bsp/: echo  sbt.json  scala-cli.json
.github/ci_scripts/: currentVersion.scala  currentVersion.test.scala  prepare_output.sh  prepare_release.sh  project.scala  project.test.scala  sed.scala  sed.test.scala  update.sh  updateArtifactShas.scala  updateArtifactShas.test.scala  updateVersion.scala  updateVersions.scala  update_all.sh  update_all.test.scala  update_versions.sh  workflow.test.scala
.github/ci_scripts/.bsp/: scala-cli.json
.github/workflows/: ci.yml  main.yml  release-candidate.yml  release.yml  scala-steward.yml  scala.yml  test.yml
bazel_rules/: BUILD.bazel  WORKSPACE  bazel  bazel_bsp_setup.bzl  bsp4bazel.bzl  bsp4bazel_setup.bzl  bsp_target.bzl  bsp_target_info_aspect.bzl  sources.bzl  src_aspect.bzl
bazel_rules/private/: BUILD.bazel  bsp_target_info_aspect.bzl  bsp_target_rules.bzl  bsp_workspace_deps.bzl  bsp_workspace_info.bzl  gather_semanticdb.sh  load_tool.bzl  sources_aspect.bzl  unzip_jar_metainf.sh.tpl  wrap_executable.bzl
bazel_rules/test/: rules.test.scala
bazel_rules/test/.bsp/: scala-cli.json
example/: BUILD  WORKSPACE
example/.bsp/: example.json
example/bazel_rules/: sources.bzl
example/toolchains/: BUILD
examples/simple-no-errors/: .bazelrc  BUILD  WORKSPACE  bazel-out  bazel-simple-no-errors  bazel-testlogs
examples/simple-no-errors-sbt/: build.sbt
examples/simple-no-errors/.bsp/: bazel-bsp.json  sbt.json
examples/simple-no-errors/src/: BUILD.bazel
examples/simple-with-errors/: .bazelBspTargets.json  .bazelrc  BUILD  WORKSPACE  bazel-out  bazel-simple-with-errors  bazel-testlogs
examples/simple-with-errors/src/: BUILD.bazel
examples/simple-with-errors/src/example/: BUILD.bazel  Main.scala
examples/simple-with-errors/src/example/foo/: BUILD.bazel  Bar.scala
project/: plugins.sbt
(+71 files in other folders)
